--- a/Lustrious/Views/Produto/Index.cshtml
+++ b/Lustrious/Views/Produto/Index.cshtml
@@ -186,6 +186,9 @@
         border: 6px solid #95845c; /* borda escura */
         border-radius: 20px;
         box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        /* avoid touching footer */
+        margin-bottom: 80px;
+        padding-bottom: 40px;
     }
 
     /* TÍTULO + BOTÃO NOVO PRODUTO */
