--- a/Lustrious/Views/Cliente/Index.cshtml
+++ b/Lustrious/Views/Cliente/Index.cshtml
@@ -173,6 +173,7 @@
                 display: flex;
                 justify-content: center;
                 padding: 40px 0;
+                padding-bottom: 80px; /* Prevent touching footer */
 
     }
 
