--- a/Lustrious/Views/Produto/Index.cshtml
+++ b/Lustrious/Views/Produto/Index.cshtml
@@ -332,6 +332,7 @@
 
         .page-btn:hover {
             background-color: #8a6d3f;
+            color: black;
         }
 
     .page-current {
