--- a/Lustrious/Views/Shared/_Layout.cshtml
+++ b/Lustrious/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Lustrious</title>
+    <title>@ViewData["Title"] - Lustrious</title><img src="~/imagens/logo.png" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Lustrious.styles.css" asp-append-version="true" />
@@ -46,7 +46,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Produto" asp-action="Index">Produtos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Produto" asp-action="Vitrine">Vitrine</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Venda" asp-action="Index">Vendas</a>
                         </li>
 
                     </ul>
