estliziando a view vendas

--- a/Lustrious/Views/Shared/_Layout.cshtml
+++ b/Lustrious/Views/Shared/_Layout.cshtml
@@ -120,7 +120,7 @@
  <a class="nav-link text-dark" asp-area="" asp-controller="Produto" asp-action="Index">Produtos</a>
  </li>
  <li class="nav-item">
- <a class="nav-link text-dark" asp-area="" asp-controller="Venda" asp-action="Index">Vendas</a>
+ <a class="nav-link text-dark" asp-area="" asp-controller="Venda" asp-action="ListarTodas">Vendas</a>
  </li>
 
  </ul>
